<resources>
    <string name="app_name">Belaytionship</string>

    <!-- Strings related to Login/Register -->
    <string name="bRegister">Register</string>
    <string name="bLogin">Login</string>
    <string name="etPassword">Password</string>
    <string name="etEmail">Email</string>
    <string name="tvUserName">Username</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <!-- Strings related to MainPage -->
    <string name="bProfile">View/Edit your profile</string>
    <string name="bLogout">Logout</string>
    <string name="bMaps">Maps</string>
    <string name="bHS">Belay safety</string>


    <string name="GoogleMapsAPIKey">AIzaSyBsq5zq7YfwqkadvhABUEKG7IhoX9WgvL0</string>


    <!-- Strings related to Profile -->
    <string name="profileDivider">Your Details: </string>
    <string name="climbingDivider">Your Climbing Details: </string>
    <string name="tvName">Name: </string>
    <string name="etName">Name</string>
    <string name="tvAge">Age: </string>
    <string name="etAge">Age</string>
    <string name="tvGender">Gender: </string>
    <string name="tvOnsights">Best Onsights: Bouldering Trad Sport</string>
    <string name="tvWorkedGrades">Worked Grades: Bouldering Trad Sport</string>
    <string name="tvYearsClimbing">Been climbing for: </string>
    <string name="tvClimbingFreq">How often do you climb: </string>
    <string name="tvFavouriteCrag">Favourite Crag: </string>
    <string name="etFavouriteCrag">Favourite Crag</string>
    <string name="tvFavouriteRock">Favourite Rock:  </string>
    <string name="tvClimbingEx">Best climbing experience:  </string>

    <!-- Strings related to Spinners -->
    <string-array name="sGender">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="sBouldering">
        <item>Unknown</item>
        <item>f2</item>
        <item>f3</item>
        <item>f4</item>
        <item>f4+</item>
        <item>f5</item>
        <item>f5+</item>
        <item>f6a</item>
        <item>f6a+</item>
        <item>f6b</item>
        <item>f6b+</item>
        <item>f6c</item>
        <item>f6c+</item>
        <item>f7a</item>
        <item>f7a+</item>
        <item>f7b</item>
        <item>f7b+</item>
        <item>f7c</item>
        <item>f7c+</item>
        <item>f8a</item>
        <item>f8a+</item>
        <item>f8b</item>
        <item>f8b+</item>
        <item>f8c</item>
        <item>f8c+</item>
    </string-array>

    <string-array name="sTrad">
        <item>Unknown</item>
        <item>XS</item>
        <item>M</item>
        <item>D</item>
        <item>HD</item>
        <item>VD</item>
        <item>HVD</item>
        <item>MS</item>
        <item>S</item>
        <item>HS</item>
        <item>MVS</item>
        <item>VS</item>
        <item>HVS</item>
        <item>E1</item>
        <item>E2</item>
        <item>E3</item>
        <item>E4</item>
        <item>E5</item>
        <item>E6</item>
        <item>E7</item>
        <item>E8</item>
        <item>E9</item>
        <item>E10</item>
        <item>E11</item>
        <item>E12</item>
    </string-array>

    <string-array name="sSport">
        <item>Unknown</item>
        <item>2</item>
        <item>3</item>
        <item>4a</item>
        <item>4b</item>
        <item>4c</item>
        <item>5a</item>
        <item>5b</item>
        <item>5v</item>
        <item>6a</item>
        <item>6a+</item>
        <item>6b</item>
        <item>6b+</item>
        <item>6c</item>
        <item>6c+</item>
        <item>7a</item>
        <item>7a+</item>
        <item>7b</item>
        <item>7b+</item>
        <item>7c</item>
        <item>7c+</item>
        <item>8a</item>
        <item>8a+</item>
        <item>8b</item>
        <item>8b+</item>
        <item>8c</item>
        <item>8c+</item>
        <item>9a</item>
        <item>9ab</item>
        <item>9b</item>
        <item>9b+</item>
        <item>9c</item>
    </string-array>

    <string-array name="sYearsClimbing">
        <item>Unknown</item>
        <item>Less than 1 year</item>
        <item>1 to 2 years</item>
        <item>3 to 5 years</item>
        <item>5 to 7 years</item>
        <item>8 to 10 years</item>
        <item>11 to 20 years</item>
        <item>More than 20 years</item>
    </string-array>

    <string-array name="sClimbingFreq">
        <item>Unknown</item>
        <item>Once a week</item>
        <item>Once a week + weekends</item>
        <item>Most week days</item>
        <item>Most week days + weekends</item>
        <item>Most weekends</item>
    </string-array>

    <string-array name="sFavouriteRock">
        <item>Unknown</item>
        <item>Amphilbiolite S</item>
        <item>Andesite</item>
        <item>Artificial</item>
        <item>Basalt</item>
        <item>Chalk</item>
        <item>Conglomerate</item>
        <item>Culm</item>
        <item>Diorites</item>
        <item>Dolerite</item>
        <item>Epidiorite</item>
        <item>Gabbro</item>
        <item>Gneiss</item>
        <item>Granite</item>
        <item>Granodiorite</item>
        <item>Greenstone</item>
        <item>Gritstone(quarried)</item>
        <item>Gritstone</item>
        <item>Ice</item>
        <item>Ignimbrite</item>
        <item>Killas slate</item>
        <item>Limestone</item>
        <item>Mica schist</item>
        <item>Microgranite</item>
        <item>Quartzite</item>
        <item>Rhyolite</item>
        <item>Sandstone(hard)</item>
        <item>Sandstone(soft)</item>
        <item>Schist</item>
        <item>Serpentine</item>
        <item>Shale</item>
        <item>Slate</item>
        <item>Trachyte</item>
        <item>Volcanic tuff</item>
        <item>Welded tuff</item>
        <item>Welsh igneous</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>

    <string name="tvChecklist"><b>Preliminary checklist</b></string>
    <string name="tvChecklist2">
                                \u2022 Start at your head, check that your helmet is buckled and fitted correctly \n
                                \u2022 Move down to your harness. Check that your knot (figure 8) is tied properly, has the correct amount of tail, and is properly fitted through harness. \n
                                \u2022 Check that your harness buckles are doubled back (or speed buckles are done correctly) \n
                                \u2022 Check your partners carabiner. Make sure it\'s connected to the belay loop, belay device, and rope is running through. \n
                                \u2022 Check their harness. \n
                                \u2022 Check that you have the protection/gear needed for the climb. \n
                                \u2022 Check nothing is going to get in your way once you start climbing. \n \n

                                <font size="18"><b>Belay Communication</b></font> \n
                                This bit will talk about about communication with your partner. This is only an example as this will change between each person \n \n
                                \u2022 Climber: “On belay?” (Are you ready to belay me?) \n
                                \u2022 Belayer: “Belay on, climb when ready.” (Climber on belay and you are ready) \n \n

                                \u2022 Climber: “Climbing.” (I’m going to climb now.) \n
                                \u2022 Belayer: “Climb on.” (I’m ready for you to climb.) \n \n

                                \u2022 Climber: “Slack!” \n
                                \u2022 Belayer: (Give out rope and pause to see if climber asks again.) \n \n

                                \u2022 Climber: “Take!.” \n
                                \u2022 Belayer: (Pull in slack and pause to see if climber asks again.) \n \n

                                \u2022 Climber: “Take me there.” (I want to rest by hanging on the rope now.) \n
                                \u2022 Belayer: (Remove all slack and hold tight.) \n \n

                                \u2022 Climber: “Ready to lower.” (I’m done climbing.) \n
                                \u2022 Belayer: (Reposition both hands to brake.) “Lowering.” \n \n

                                \u2022 Climber: “Off belay.” (I’m standing securely on the ground.) \n
                                \u2022 Belayer: “Belay off.” (I’ve stopped belaying you.) </string>
    <string name="toast_text">Register Successful</string>
    <string name="toast_text2">Successfully signed in with: test@test.com</string>


</resources>
